Fixed header spacing with flex boxes.

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -15,7 +15,7 @@
     margin-right: auto;
 }
 
-.Links {
+.FooterLinks {
     display: flex;
     flex-direction: row;
     align-items: center;
