--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,31 +1,32 @@
 .Main {
-    background-color:grey;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
 
-    height: 45vh;
+    height: 60vh;
+    width: 100vw;
 }
-
 .Other {
-    background-color:grey;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
 
+    background-color:grey;
     height: 15vh;
+    width: 100vw;
 }
 
 .Title {
+    display: flex;
+    justify-content: center;
+    flex: 1;
     font-size: 2.5rem;
 }
 
+.Links {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    padding-right: 2vw;
+}
 .Link {
-    display:flex;
-    flex-wrap:wrap;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
