--- a/src/components/mainPage/MainPage.scss
+++ b/src/components/mainPage/MainPage.scss
@@ -11,17 +11,6 @@ html, body {
     background-size: cover;
 }
 
-
-.WelcomeSection {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    height: 60vh;
-    width: 100vw;
-}
-
-
 .IntroSection {
     display: flex;
     flex-direction: row;
